link to real repo

--- a/README
+++ b/README
@@ -1,6 +1,8 @@
 Idler IRC bot
 -------------
 
+real repo is here: http://fossil.gertm.eu/dingding/
+
 My personal little IRC bot, used to flex my Erlang muscles.
 
 Feel free to:
